@@ -160,7 +160,6 @@ static inline void xnlock_put_irqrestore (xnlock_t *lock, spl_t flags)
 #else /* CONFIG_X86_LOCAL_APIC */
 #define XNARCH_HOST_TICK             (1000000000UL/HZ)
 #endif /* CONFIG_X86_LOCAL_APIC */
-#define XNARCH_SCHED_LATENCY         CONFIG_RTAI_HW_SCHED_LATENCY
 #define XNARCH_CALIBRATION_PERIOD    100000 /* ns */
 
 #define XNARCH_THREAD_STACKSZ 4096
